crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"fn () => { let x = 5 let y = 10 return x + y }\")"
---
Expr {
    kind: Function(
        Function {
            type_params: None,
            params: [],
            body: Block(
                Block {
                    span: 8..46,
                    stmts: [
                        Stmt {
                            kind: Let {
                                is_declare: false,
                                is_var: false,
                                is_mut: false,
                                pattern: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "x",
                                            span: 15..16,
                                            mutable: false,
                                        },
                                    ),
                                    span: 15..16,
                                    inferred_type: None,
                                },
                                expr: Some(
                                    Expr {
                                        kind: Num(
                                            Num {
                                                value: "5",
                                            },
                                        ),
                                        span: 19..20,
                                        inferred_type: None,
                                    },
                                ),
                                type_ann: None,
                            },
                            span: 11..20,
                            inferred_type: None,
                        },
                        Stmt {
                            kind: Let {
                                is_declare: false,
                                is_var: false,
                                is_mut: false,
                                pattern: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "y",
                                            span: 25..26,
                                            mutable: false,
                                        },
                                    ),
                                    span: 25..26,
                                    inferred_type: None,
                                },
                                expr: Some(
                                    Expr {
                                        kind: Num(
                                            Num {
                                                value: "10",
                                            },
                                        ),
                                        span: 29..31,
                                        inferred_type: None,
                                    },
                                ),
                                type_ann: None,
                            },
                            span: 21..31,
                            inferred_type: None,
                        },
                        Stmt {
                            kind: Return {
                                arg: Some(
                                    Expr {
                                        kind: Binary(
                                            Binary {
                                                left: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "x",
                                                            span: 39..40,
                                                        },
                                                    ),
                                                    span: 39..40,
                                                    inferred_type: None,
                                                },
                                                op: Plus,
                                                right: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "y",
                                                            span: 43..44,
                                                        },
                                                    ),
                                                    span: 43..44,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        span: 39..44,
                                        inferred_type: None,
                                    },
                                ),
                            },
                            span: 39..44,
                            inferred_type: None,
                        },
                    ],
                },
            ),
            type_ann: None,
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..46,
    inferred_type: None,
}
