crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_with_throws.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"fn (x, y) throws string => x + y\"#)"
---
Expr {
    kind: Function(
        Function {
            type_params: None,
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "x",
                                span: 4..5,
                                mutable: false,
                            },
                        ),
                        span: 4..5,
                        inferred_type: None,
                    },
                    type_ann: None,
                    optional: false,
                },
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "y",
                                span: 7..8,
                                mutable: false,
                            },
                        ),
                        span: 7..8,
                        inferred_type: None,
                    },
                    type_ann: None,
                    optional: false,
                },
            ],
            body: Expr(
                Expr {
                    kind: Binary(
                        Binary {
                            left: Expr {
                                kind: Ident(
                                    Ident {
                                        name: "x",
                                        span: 27..28,
                                    },
                                ),
                                span: 27..28,
                                inferred_type: None,
                            },
                            op: Plus,
                            right: Expr {
                                kind: Ident(
                                    Ident {
                                        name: "y",
                                        span: 31..32,
                                    },
                                ),
                                span: 31..32,
                                inferred_type: None,
                            },
                        },
                    ),
                    span: 27..32,
                    inferred_type: None,
                },
            ),
            type_ann: None,
            throws: Some(
                TypeAnn {
                    kind: String,
                    span: 17..23,
                    inferred_type: None,
                },
            ),
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..32,
    inferred_type: None,
}
