crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_member_access-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a.b+c.d\")"
---
Expr {
    kind: Binary(
        Binary {
            left: Expr {
                kind: Member(
                    Member {
                        object: Expr {
                            kind: Ident(
                                Ident {
                                    name: "a",
                                    span: 0..1,
                                },
                            ),
                            span: 0..1,
                            inferred_type: None,
                        },
                        property: Ident(
                            Ident {
                                name: "b",
                                span: 2..3,
                            },
                        ),
                        opt_chain: false,
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            op: Plus,
            right: Expr {
                kind: Member(
                    Member {
                        object: Expr {
                            kind: Ident(
                                Ident {
                                    name: "c",
                                    span: 4..5,
                                },
                            ),
                            span: 4..5,
                            inferred_type: None,
                        },
                        property: Ident(
                            Ident {
                                name: "d",
                                span: 6..7,
                            },
                        ),
                        opt_chain: false,
                    },
                ),
                span: 4..7,
                inferred_type: None,
            },
        },
    ),
    span: 0..7,
    inferred_type: None,
}
